recursion.lessons.recursion.koch.Koch.scala.error
Koch:1: error: Missing closing brace `}' assumed here
def snowFlake (levels:Int, length:Double) {
^Koch:11: error: expected class or object definition
def snowSide(levels:Int, length:Double) {
^Koch:13: error: expected class or object definition
if(levels==0){
^